--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
-      <h1 class="project-name">Welcome to GitHub Pages</h1>
+      <h1 class="project-name">H~e~l~l~o</h1>
       <h2 class="project-tagline">first try</h2>
       
         <a href="https://github.com/pikachu2022/Hello-World" class="btn">View on GitHub</a>
